Add /user route

--- a/examples/redux/public/index.html
+++ b/examples/redux/public/index.html
@@ -7,14 +7,10 @@
   </head>
 
   <body>
-    <!--
-      App
-    -->
-    <app></app>
+    <route></route>
 
     <!-- Redux -->
     <script src="build/app.js"></script>
-
   </body>
 
 </html>
