--- a/examples/redux/index.html
+++ b/examples/redux/index.html
@@ -31,7 +31,7 @@
     <script src="./common.js"></script>
 
     <!-- Initialization -->
-    <script type="riot/tag" src="tags.html"></script>
+    <script type="riot/tag" src="app.html"></script>
     <script src="./app.js"></script>
   </body>
 </html>
