--- a/examples/redux/index.html
+++ b/examples/redux/index.html
@@ -20,18 +20,19 @@
     <script src="https://unpkg.com/riot-router@0.8.1/lib/router.min.js"></script>
     -->
     <script src="../../node_modules/riot/riot+compiler.min.js"></script>
+    <script src="../../node_modules/riot-route/dist/route.min.js"></script>
     <script src="../../lib/router.js"></script>
     <script src="https://unpkg.com/redux@3.6.0/dist/redux.min.js"></script>
     <script src="https://unpkg.com/riot-state-updater@1.0.0/dist/riot-state-updater.min.js"></script>
 
     <!-- Application dependencies -->
-    <script src="https://unpkg.com/lodash@4.16.4/lodash.min.js"></script>
+    <script src="https://unpkg.com/lodash@4.17.4/lodash.min.js"></script>
     <script src="https://unpkg.com/jquery@3.1.1/dist/jquery.min.js"></script>
-    <script src="https://unpkg.com/uikit@2.27.1/dist/js/uikit.min.js"></script>
+    <script src="https://unpkg.com/uikit@2.27.2/dist/js/uikit.min.js"></script>
     <script src="./common.js"></script>
 
     <!-- Initialization -->
-    <script type="riot/tag" src="app.html"></script>
+    <script type="riot/tag" data-src="app.html"></script>
     <script src="./app.js"></script>
   </body>
 </html>
