--- a/examples/redux/index.html
+++ b/examples/redux/index.html
@@ -8,11 +8,11 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
     -->
-    <link rel="stylesheet" href="https://unpkg.com/uikit@2.27.1/dist/css/uikit.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/uikit@2/dist/css/uikit.min.css">
   </head>
   <body class="uk-height-1-1">
 
-    <div riot-tag='route' class='uk-height-1-1'></div>
+    <div data-is='route' class='uk-height-1-1'></div>
 
     <!-- Essencial dependencies -->
     <!--
@@ -20,8 +20,7 @@
     <script src="https://unpkg.com/riot-router@0.8.1/lib/router.min.js"></script>
     -->
     <script src="../../node_modules/riot/riot+compiler.min.js"></script>
-    <script src="../../node_modules/riot-route/dist/route.min.js"></script>
-    <script src="../../lib/router.js"></script>
+    <script src="../../dist/router.js"></script>
     <script src="https://unpkg.com/redux@3.6.0/dist/redux.min.js"></script>
     <script src="https://unpkg.com/riot-state-updater@1.0.0/dist/riot-state-updater.min.js"></script>
 
