--- a/examples/example-01.html
+++ b/examples/example-01.html
@@ -31,7 +31,6 @@
   </style>
 </head>
 <body>
-
   <app/>
 
   <!--
@@ -48,7 +47,7 @@
         window.user = this.refs.username;
         localStorage.setItem('user', window.user);
         // Go to home page
-        riot.router.navigateTo('#/');
+        router.navigateTo('/');
       }
     </login>
 
@@ -56,7 +55,7 @@
       window.user = null;
       localStorage.removeItem('user');
       // Go to login page
-      riot.router.navigateTo('#/login');
+      router.navigateTo('/login');
     </logout>
 
     <!-- Application -->
@@ -68,9 +67,9 @@
     <!-- Main menu -->
     <main-menu class="ui teal inverted top fixed app menu">
       <div class="ui container">
-        <a class={item: true, active: menu.url.substring(1) === riot.router.current.uri} href="{menu.url}" each={menu in this.leftMenus}><i class="{menu.icon} icon" if={menu.icon}></i>{menu.text}</a>
+        <a class={item: true, active: menu.url.substring(1) === router.current.uri} href="{menu.url}" each={menu in this.leftMenus}><i class="{menu.icon} icon" if={menu.icon}></i>{menu.text}</a>
         <div class="right menu" if={this.rightMenus && this.rightMenus.length}>
-          <a class={item: true, active: menu.url.substring(1) === riot.router.current.uri} href="{menu.url}" each={menu in this.rightMenus}><i class="{menu.icon} icon" if={menu.icon}></i>{menu.text}</a>
+          <a class={item: true, active: menu.url.substring(1) === router.current.uri} href="{menu.url}" each={menu in this.rightMenus}><i class="{menu.icon} icon" if={menu.icon}></i>{menu.text}</a>
         </div>
       </div>
       createLeftMenus() {
@@ -104,8 +103,7 @@
 
 
       // On route update, update this fragment.
-      riot.router.on('route:updated', function() {
-        console.log("router updated");
+      router.on('route:updated', function() {
         this.createMenus();
         this.update();
       }.bind(this));
@@ -157,8 +155,11 @@
         return true;
       }
 
-      this.on('update', function() {
-        this.userId = riot.router.current.params.userId;
+      this.on('mount', function() {
+        if (this.userId != router.current.params.userId) {
+          this.userId = router.current.params.userId;
+          this.update();
+        }
       }.bind(this));
     </users>
 
@@ -175,7 +176,7 @@
         this.animate = opts.animate === "true";
         this.user = window.users.getUser(this.userId);
         if (this.user === null) {
-          riot.router.navigateTo('/not-found');
+          router.navigateTo('/not-found');
         }
       }
       this.on('update', this.updateContent.bind(this));
@@ -212,12 +213,9 @@
 
     <!-- Not found page -->
     <not-found>
-      <div class="ui segment">Page '{riot.router.current.uri}' not found! </div>
+      <div class="ui segment">Page '{router.current.uri}' not found! </div>
     </not-found>
   </script>
-  <script src="../node_modules/riot/riot+compiler.min.js"></script>
-  <script src="../node_modules/riot-route/dist/route.min.js"></script>
-  <script src="../lib/router.js"></script>
 
   <!--
     App Services
@@ -242,6 +240,9 @@
     }
   </script>
 
+  <script src="../node_modules/riot/riot+compiler.min.js"></script>
+  <script src="../dist/router.js"></script>
+
   <!--
     Page initialization
   -->
@@ -265,16 +266,16 @@
     // Mount all Riot tags.
     riot.mount('*');
 
-    var Route = riot.router.Route,
-        DefaultRoute = riot.router.DefaultRoute,
-        NotFoundRoute = riot.router.NotFoundRoute,
-        RedirectRoute = riot.router.RedirectRoute;
+    var Route = Router.Route,
+        DefaultRoute = Router.DefaultRoute,
+        NotFoundRoute = Router.NotFoundRoute,
+        RedirectRoute = Router.RedirectRoute;
 
     // Apply security filter to Riot-Router
-    riot.router.use(securityFilter);
+    router.use(securityFilter);
 
     // My app routes
-    riot.router.routes([
+    router.routes([
       new DefaultRoute({tag: 'home'}),
       new Route({tag: 'login'}),
       new Route({tag: 'logout'}),
@@ -296,7 +297,7 @@
     ]);
 
     // Start routing
-    riot.router.start();
+    router.start();
 
   </script>
 </body>
