--- a/examples/redux/index.html
+++ b/examples/redux/index.html
@@ -16,8 +16,8 @@
 
     <!-- Essencial dependencies -->
     <!--
-    <script src="https://unpkg.com/riot@2.6.4/riot+compiler.min.js"></script>
-    <script src="https://unpkg.com/riot-router@0.8.1/lib/router.min.js"></script>
+    <script src="https://unpkg.com/riot/riot+compiler.min.js"></script>
+    <script src="https://unpkg.com/riot-router/lib/router.min.js"></script>
     -->
     <script src="../../node_modules/riot/riot+compiler.min.js"></script>
     <script src="../../dist/router.js"></script>
